--- a/nav.css
+++ b/nav.css
@@ -1,20 +1,66 @@
 *
 {  padding:0 ; margin:0;box-sizing: border-box;
     }
+#somemore
+{
+ width:400px;
+ height:400px;
+ background-color: aqua;
+}
 
 
 #header
     {
         width : 100%;
             height: 100px;
-            background-color: grey;
-            color:white;
             font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            line-height: 100px; 
+            display:flex;
+            justify-content: space-between;
+            padding: 0px 20px;
+            align-items: center;
+            background-color: grey;
+            position:fixed;
+            top:0;
                
 
     }
+#logo
+{
+    width:80px;
+    height:80px;
+    border:1px solid black;
+    border-radius: 80px;
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    color: white;
+    font-weight: bold;
+    text-align: justify;
+} 
+#logo:hover{
+    background-color: white;
+    color: black;
+} 
+nav ul
+{
+    list-style:none;
+    display:flex;
+
+}  
+nav ul li a
+{
+    text-decoration: none;
+    color:white;
+    text-transform:uppercase;
+    padding:15px 20px;
+    font-size:20px;
+    border-radius: 20px;
+}
+nav ul li a:hover
+{
+    background-color: white;
+    color: black;
+}
 .banner
     {
         margin-top: 20px;
