--- a/nav.css
+++ b/nav.css
@@ -1,176 +1,50 @@
 *
 {  padding:0 ; margin:0;box-sizing: border-box;
     }
-#somemore
-{
- width:400px;
- height:400px;
- background-color: aqua;
-}
 
 
 #header
     {
-        width : 100%;
+            width : 100%;
             height: 100px;
-            font-family: Arial, Helvetica, sans-serif;
-            display:flex;
-            justify-content: space-between;
-            padding: 0px 20px;
-            align-items: center;
             background-color: grey;
-            position:fixed;
-            top:0;
-               
-
+            color:white;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+            line-height: 100px; 
+            display:flex;
+            
+            
     }
-#logo
+ #header ul
 {
-    width:80px;
-    height:80px;
-    border:1px solid black;
-    border-radius: 80px;
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    color: white;
-    font-weight: bold;
-    text-align: justify;
-} 
-#logo:hover{
-    background-color: white;
-    color: black;
-} 
-nav ul
-{
-    list-style:none;
-    display:flex;
-
-}  
-nav ul li a
-{
-    text-decoration: none;
-    color:white;
-    text-transform:uppercase;
-    padding:15px 20px;
-    font-size:20px;
-    border-radius: 20px;
-}
-nav ul li a:hover
-{
-    background-color: white;
-    color: black;
-}
-.banner
-    {
-        margin-top: 20px;
-        width:100%;
-        height:100vh;/*view port height*/
-        background-color:rgba(47, 180, 241, 0.412);
-        color:white;
-        font-family: Arial, Helvetica, sans-serif;
+        display: flex;
+        padding: 10px;
         text-align: center;
-        line-height: 100vh;   
-
+        
     }
-#sec-1
+      
+#header ul li
+{ 
+        list-style: none;
+        font-size: 1.3rem;
+        list-style: none;
+        justify-items: left;
+        display: flex;
+      }
+      
+      
+#header ul li a
 {
-    display:flex;
-
-}
-#sec-1 .circles {
-     width: 250px;
-     height: 250px;
-     background-color: orange;
-     color:white
-     display:inline-block; 
-     border-radius: 50%;
-     margin :20px;
-     font-size:24px;
-     display:flex;
-     justify-content: center;
-     align-items: center;
-     
-} 
-body
+       
+        padding: 3px 26px;
+        border-radius: 20px;
+        text-decoration: none;
+        color: black;
+        display: inline;
+      }
+#header ul li a:hover
 {
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-h2
-{
-    text-align: center;
-    margin: 20px 0px;
-    font-size: 40px;
-
-}
-#sec-2
-{
-    display: flex;
-    justify-content: space-between;
-}
-#sec-2 main
-{
-    width: 50%;
-    height:500px;
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    color:white;
-    font-size:24px;
-
-}
-aside
-{
-    align-items: center;
-    width: 48%;
-    height:500px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: column;
-    color:rgb(2, 1, 13)
-   
-    
-
-}
-aside .art
-{
-    width: 100%;
-    height:150px;
-    background-color:orange;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-   
-}
-#sec-3
-{
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    
-}
-#sec-3 .boxes
-{
-    width: 20%;
-    height: 300px;
-    background-color:red;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    
-}
-footer
-{
-    width: 100%;
-    height: 100px;
-    background-color: pink;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    color: white;
-}
-
+       transform: scale(1.08);
+       transition:transform 150ms;
+      }
