--- a/nav.css
+++ b/nav.css
@@ -1,50 +1,54 @@
 *
-{  padding:0 ; margin:0;box-sizing: border-box;
+{  padding:0 ; margin:0;box-sizing: border-box; text-decoration: none; list-style: none;
     }
 
 
-#header
-    {
-            width : 100%;
-            height: 100px;
-            background-color: grey;
-            color:white;
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            line-height: 100px; 
-            display:flex;
-            
-            
-    }
- #header ul
+body
 {
-        display: flex;
-        padding: 10px;
-        text-align: center;
-        
+    font-family: Arial, Helvetica, sans-serif;
+}
+nav{
+    background:grey;
+    height:80px;width:100%
+}
+
+label.logo
+{
+    color:white;
+    font-size:35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+ nav ul
+{
+        float:right;
+        margin-right: 20px;
     }
       
-#header ul li
+nav ul li
 { 
-        list-style: none;
-        font-size: 1.3rem;
-        list-style: none;
-        justify-items: left;
-        display: flex;
-      }
+       display: inline-block;
+       line-height: 80px;
+       margin:0 50px;
+    }
       
       
-#header ul li a
+nav ul li a
 {
        
-        padding: 3px 26px;
-        border-radius: 20px;
+        padding: 7px 13px;
+        border-radius: 3px;
         text-decoration: none;
-        color: black;
+        color: white;
         display: inline;
+        text-transform:uppercase;
+        font-size:19px;
       }
-#header ul li a:hover
+a.active,a:hover
 {
        transform: scale(1.08);
        transition:transform 150ms;
+       background: #1b9bff;
+
       }
